# runner

./: pyproject.toml
src/: satori_runner.py
